2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.cc (octave_map::cat): Search first for an index with 
	nonzero nfields and use it for comparisons.
	(permute_to_correct_order1): New overloaded helper func.
	(permute_to_correct_order): use it here. Pass the index here.
	* pt-mat.cc (single_type_concat): Don't subst 0x0 for all empty
	arrays. Use the respective cat() capability instead.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Support "emptyvalue" option.
	Fix condition for terminating read.

2010-08-31  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Support reading from a file ID.

2010-08-31  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (get_current_method_class): Make it an octave_class
	method. Return class_name as default.
	(octave_class::dotref): Error on zero return value.

2010-08-30  Ben Abbott <bpabbott@mac.com>

	* gl-render.cc: Matlab compatible markers for the OpenGL.

2010-08-30  John W. Eaton  <jwe@octave.org>

	* graphics.cc (convert_cdata_1, convert_cdata_2): New functions.
	(convert_cdata): Use them to avoid converting all elements of
	cdata to double at once.
	* graphics.h.in (surface::properties::init): Constrain cdata and
	alphadata to be single, double, or uint8.

2010-08-30  Jaroslav Hajek  <highegg@gmail.com>

	* graphics.cc (convert_cdata): Avoid extracting pointer to temporary
	copy.

2010-08-30  John W. Eaton  <jwe@octave.org>

	* graphics.cc (convert_cdata): Allow cdata to be any type that
	can be converted to double.
	* graphics.h.in (surface::properties::init): Remove constraints
	on cdata and alphadata.

2010-08-27  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* graphics.cc (axes::properties::rotate_view): Don't rotate past
	the top and bottom.
	(axes::properties::update_camera): Fix the view when rotating to
	the bottom.
	(calc_dimensions): New static function.
	(F__calc_dimensions__) New defun to replace m-script function.