@@ -1,5 +1,10 @@
 2010-09-01  Jaroslav Hajek  <highegg@gmail.com>
 
+	* pt-mat.cc (single_type_concat (Array<T>&, ...)): Optimize all
+	scalars case.
+
+2010-09-01  Jaroslav Hajek  <highegg@gmail.com>
+
 	* oct-map.cc (octave_map::cat): Search first for an index with 
 	nonzero nfields and use it for comparisons.
 	(permute_to_correct_order1): New overloaded helper func.
